deploy/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: testapp-deployment
  labels:
    app: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  serviceName: "testapp"
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: "quay.io/ixcloud/testapp:0.0.2"
        ports:
        - containerPort: 10000
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: testapp-data
      imagePullSecrets:
        - name: testapp-pull-secret
  volumeClaimTemplates:
  - metadata:
      name: testapp-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nas-eco-prd"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: testapp
  labels:
    app: testapp
spec:
  ports:
  - port: 10000
    protocol: TCP
    name: testapp
    targetPort: 10000
  selector:
    app: testapp
---
