deploy/deploynostorage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
        role: frontend
    spec:
      containers:
        - name: testapp
          image: "quay.io/ixcloud/testapp:0.0.2"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 10000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: testapp-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: testapp
  labels:
    app: testapp
spec:
  ports:
    - port: 10000
      protocol: TCP
      name: testapp
      targetPort: 10000
  selector:
    app: testapp
---
