deploy/allow-pods-in-prj.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-pods
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
          # namespaceSelector:
          #   matchLabels:
          #     project: testapp
  policyTypes:
    - Ingress
